styled basic hero, fixed nav overflow issue

--- a/src/scss/_768up.scss
+++ b/src/scss/_768up.scss
@@ -4,3 +4,12 @@
     justify-content: flex-start;
   }
 }
+
+// Hero
+.hero {
+  .slider {
+    img {
+      height: 45vh;
+    }
+  }
+}
