--- a/src/scss/partials/grid.scss
+++ b/src/scss/partials/grid.scss
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: 30% 70%;
   grid-template-rows: 150px;
-  grid-column-gap: 10px;
+  // grid-column-gap: 10px;
 }
 
 @media (max-width: 768px) {
